TMP_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
  name: httpbin
  namespace: httpbin
spec:
  hostnames:
  - www.formation-istio.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    sectionName: http
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: httpbin
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
