argocd_access.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway # ou selon ton istio-ingressgateway réel
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - argocd.local
      tls:
        mode: SIMPLE
        credentialName: argocd-cert

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  hosts:
    - argocd.local
  gateways:
    - argocd-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
